# phoenix-admin

./: LICENSE  README.md  Taskfile.yml  pyproject.toml
phoenix_admin/: admin.py  config.py  exceptions.py  jinja_helpers.py  protocols.py  responses.py  unset.py  utils.py
phoenix_admin/fields/: base.py
phoenix_admin/statics/css/: copy.css
phoenix_admin/statics/js/: copy.js
phoenix_admin/templates/: base.html  form.html  json_result.html
phoenix_admin/templates/datagrid/: default_item.html  grid.html
phoenix_admin/templates/form_fields/: checkbox.html  date.html  email.html  file.html  hidden.html  input.html  number.html  password.html  select.html  textarea.html
phoenix_admin/templates/macros/: dropdown_view.html  form_view.html  link_view.html
phoenix_admin/views/: base.py  drop_down.py  form.py  index.py  link.py
